README, add JQ file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="images/tree.png">
+  <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
   <title>Myprofile_v2</title>
 </head>
 <body>
